# RV32I-Instruction-Set-Simulator-C-

./: CMakeLists.txt  README.md  cpu.cpp  memory.hpp
Include/rv/: cpu.hpp
src/: c_cpp_properties.json  cpu.cpp  main.cpp  memory.cpp
tests/: test_rv32i.cpp
